--- a/index.html
+++ b/index.html
@@ -72,15 +72,21 @@ const TERMS = [ { label:"114 學年度上學期", code:"11401", folder:"11401" }
 const CATALOG = {
   "114 學年度上學期": {
     "一年級": {
-      "康軒": "data/11401/康軒_一年級.json", // 6 課
-      "南一": "data/11401/南一_一年級.json", // 7 課
-      "翰林": "data/11401/翰林_一年級.json"  // 7 課
+      "康軒": "data/11401/康軒_一年級.json",
+      "南一": "data/11401/南一_一年級.json",
+      "翰林": "data/11401/翰林_一年級.json"
+    },
+    "二年級": {
+      "康軒": "data/11401/康軒_二年級.json",
+      "南一": "data/11401/南一_二年級.json",
+      "翰林": "data/11401/翰林_二年級.json"
     },
     "三年級": {
       "南一": "data/11401/南一_三年級.json"
     }
   }
 };
+
 
 const FALLBACK = {
   "114 學年度上學期|三年級|南一": {
