--- a/index.html
+++ b/index.html
@@ -70,19 +70,23 @@ const PUB_CODE = { "南一":"0102", "康軒":"0103", "翰林":"0101" };
 const GRADE_CODE = { "一年級":"01","二年級":"02","三年級":"03","四年級":"04","五年級":"05","六年級":"06" };
 const TERMS = [ { label:"114 學年度上學期", code:"11401", folder:"11401" } ];
 const CATALOG = {
+const CATALOG = {
   "114 學年度上學期": {
     "一年級": {
-      "康軒": "data/11401/康軒_一年級.json",
-      "南一": "data/11401/南一_一年級.json",
-      "翰林": "data/11401/翰林_一年級.json"
+      "康軒": "data/11401/data_11401_康軒_一年級.json",
+      "南一": "data/11401/data_11401_南一_一年級.json",
+      "翰林": "data/11401/data_11401_翰林_一年級.json"
     },
     "二年級": {
-      "康軒": "data/11401/康軒_二年級.json",
-      "南一": "data/11401/南一_二年級.json",
-      "翰林": "data/11401/翰林_二年級.json"
+      "康軒": "data/11401/data_11401_康軒_二年級.json",
+      "南一": "data/11401/data_11401_南一_二年級.json",
+      "翰林": "data/11401/data_11401_翰林_二年級.json"
     },
     "三年級": {
-      "南一": "data/11401/南一_三年級.json"
+      "南一": "data/11401/data_11401_南一_三年級.json"
+      // 若你也已上傳這兩個，就加上：
+      // "康軒": "data/11401/data_11401_康軒_三年級.json",
+      // "翰林": "data/11401/data_11401_翰林_三年級.json"
     }
   }
 };
