--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>國語生字 → 成語典連結（114 學年度上學期）</title>
+  <title>國語生字 → 成語典連結</title>
   <style>
     :root{
       --bg:#fffefb;
@@ -38,7 +38,7 @@
 </head>
 <body>
   <header>
-    <h1>國小國語生字 ➜ 《成語典》連結</h1>
+    <h1>國小國語生字 ➜ 《成語典》</h1>
     <p class="sub">先選 <b>學期</b> → <b>年級</b> → <b>版本</b> → <b>課別</b>，即可查看每個生字的《成語典》查詢。</p>
   </header>
 
