--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
   <header>
     <h1>國小國語生字 ➜ 《成語典》</h1>
-    <p class="sub">先選 <b>學期</b> → <b>年級</b> → <b>版本</b> → <b>課別</b>，即可查看每個生字的《成語典》查詢。</p>
+    <p class="sub">選擇 <b>學期</b> → <b>年級</b> → <b>版本</b> → <b>課別</b>，查看每個生字的《成語典》連結。</p>
   </header>
 
   <div class="container">
@@ -60,7 +60,7 @@
 
       <table id="result">
         <thead>
-          <tr><th style="width:120px">生字</th><th>成語典</th></tr>
+          <tr><th style="width:120px">生字</th><th>《成語典》</th></tr>
         </thead>
         <tbody></tbody>
       </table>
