--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>國語生字 → 成語典連結</title>
+  <title>國語生字 🔗 《成語典》</title>
   <style>
     :root{
       --bg:#fffefb;
@@ -34,9 +34,9 @@
     th{background:#fff; position:sticky; top:0;}
     /* 生字欄更窄、字再大一點點 */
     #result th:first-child{width:6rem;}
-    #result td.char{font-size:30px; font-weight:700; letter-spacing:2px; white-space:nowrap;}
+    #result td.char{font-size:28px; font-weight:700; letter-spacing:2px; white-space:nowrap;}
     /* 成語欄吃剩餘寬度、字體更大 */
-    #result thead th:nth-child(2){font-size:17px;}
+    #result thead th{ font-size:17px; }
     #result td.idioms{font-size:18px; line-height:1.9;}
 
     td a{color:#0d6efd; text-decoration:none;}
@@ -47,8 +47,8 @@
 </head>
 <body>
   <header>
-    <h1>國小國語生字 ➜ 《成語典》</h1>
-    <p class="sub">選 <b>學期</b> → <b>年級</b> → <b>版本</b> → <b>課別</b>，查看每個生字的《成語典》連結。</p>
+    <h1>國小國語生字 🔗 《成語典》</h1>
+    <p class="sub">⏬ 選 <b>學期</b> → <b>年級</b> → <b>版本</b> → <b>課別</b> <br> 🔍 查看每個生字的《成語典》連結</p>
   </header>
 
   <div class="container">
