--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
 
 <footer id="legal">
   <small>
-    來源：教育雲「教育百科」
-    （<a href="https://pedia.cloud.edu.tw/Home/CopyRight" target="_blank" rel="noopener">版權</a>）；
-    教育部《成語典》
-    （<a href="https://dict.idioms.moe.edu.tw/pageView.jsp?ID=44&la=0&webMd=2" target="_blank" rel="noopener">著作權</a>）。
+    生字清單來自教育雲「教育百科」
+    （<a href="https://pedia.cloud.edu.tw/Home/CopyRight" target="_blank" rel="noopener">版權說明</a>）；
+    成語資料來源為教育部《成語典》
+    （<a href="https://dict.idioms.moe.edu.tw/pageView.jsp?ID=44&la=0&webMd=2" target="_blank" rel="noopener">著作權</a>／
+    <a href="https://language.moe.gov.tw/001/Upload/Files/site_content/M0001/respub/idiomsdict_10409.pdf" target="_blank" rel="noopener">授權條款</a>）。
+    各連結頁內容與權利皆屬原網站所有。
   </small>
 </footer>
 
