--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>國語生字 🔗 《成語典》</title>
+  <title>生字🔗筆順練習🔗成語</title>
   <style>
     :root{
       --bg:#fffefb;
@@ -47,8 +47,8 @@
 </head>
 <body>
   <header>
-    <h1>國小國語生字 🔗 《成語典》</h1>
-    <p class="sub">⏬ 選 <b>學期</b> → <b>年級</b> → <b>版本</b> → <b>課別</b> <br> 🔍 查看每個生字的《成語典》連結</p>
+    <h1>生字🔗筆順練習🔗成語</h1>
+    <p class="sub">⏬ 選 <b>學期</b> → <b>年級</b> → <b>版本</b> → <b>課別</b> <br> 🔍 查看生字的筆順和成語連結</p>
   </header>
 
   <div class="container">
@@ -234,11 +234,11 @@ function render(){
   const chars = (window.CURRENT_DATA||{})[les] || [];
   const id = pediaId(term, grade, pub, les);
   const lessonURL = `https://pedia.cloud.edu.tw/Bookmark/TCollection?TextNameId=${id}`;
-  $('#meta').innerHTML = `<strong>${term}</strong>｜<strong>${grade}</strong>｜<strong>${pub}</strong>｜<a href="${lessonURL}" target="_blank" rel="noopener">📖 ${les}</a> <span class="note">《教育百科》生字詞彙表</span>`;
+  $('#meta').innerHTML = `<strong>${term}</strong>｜<strong>${grade}</strong>｜<strong>${pub}</strong> <br> <a href="${lessonURL}" target="_blank" rel="noopener">📖 ${les}</a> <span class="note">《教育百科》生字詞彙表</span>`;
   (function(){
     const strokeText = encodeURIComponent(chars.join(''));
     const strokeURL = `https://stroke-order.learningweb.moe.edu.tw/searchW.jsp?WORD=${strokeText}&la=0`;
-    $('#meta').insertAdjacentHTML('beforeend', `<br><a href="${strokeURL}" target="_blank" rel="noopener">✍️ 筆順練習</a>`);
+    $('#meta').insertAdjacentHTML('beforeend', `<br><a href="${strokeURL}" target="_blank" rel="noopener">✍️ 筆順練習</a><span class="note">教育部《筆順學習網》</span>`);
   })();
   $('#stats').textContent = chars.length ? `　共 ${chars.length} 個生字` : '';
   const tbody = $('#result tbody');
