--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                                                                                     
     成語檢索連結至教育部《成語典》
     （<a href="https://dict.idioms.moe.edu.tw/pageView.jsp?ID=44&la=0&webMd=2" target="_blank" rel="noopener">著作權</a>／
-    <a href="https://language.moe.gov.tw/001/Upload/Files/site_content/M0001/respub/idiomsdict_10409.pdf" target="_blank" rel="noopener">授權條款</a>）；筆順練習連結至教育部《國字標準字體筆順學習網》（<a href="https://stroke-order.learningweb.moe.edu.tw/page.jsp?ID=52" target="_blank" rel="noopener">版權說明</a>）
+    <a href="https://language.moe.gov.tw/001/Upload/Files/site_content/M0001/respub/idiomsdict_10409.pdf" target="_blank" rel="noopener">授權條款</a>）；筆順練習連結至教育部《國字標準字體筆順學習網》（<a href="https://stroke-order.learningweb.moe.edu.tw/page.jsp?ID=52" target="_blank" rel="noopener">版權說明</a>）。
     各連結頁內容與權利皆屬原網站所有。
   </small>
 </footer>
