--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
   <header>
     <h1>生字🔗筆順練習🔗成語</h1>
-    <p class="sub">⏬ 選 <b>學期</b> → <b>年級</b> → <b>版本</b> → <b>課別</b> <br> 🔍 查看生字的筆順和成語連結</p>
+    <p class="sub">⏬ 選 <b>學期</b> → <b>年級</b> → <b>版本</b> → <b>課別</b> <br> 🔍 查看生字的<b>筆順</b>和<b>成語</b>連結</p>
   </header>
 
   <div class="container">
