--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>生字🔗筆順練習🔗成語</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
     :root{
       --bg:#fffefb;
@@ -79,13 +81,31 @@
     </div>
   </div>
 
-<footer id="legal">
-  <small>
-    生字清單來自<a href="https://pedia.cloud.edu.tw/Home/CopyRight" target="_blank" rel="noopener">教育雲「教育百科」</a>；
-    成語檢索連結至<a href="https://dict.idioms.moe.edu.tw/pageView.jsp?ID=44&la=0&webMd=2" target="_blank" rel="noopener">教育部《成語典》</a>(
-    <a href="https://language.moe.gov.tw/001/Upload/Files/site_content/M0001/respub/idiomsdict_10409.pdf" target="_blank" rel="noopener">授權條款</a>）；筆順練習連結至<a href="https://stroke-order.learningweb.moe.edu.tw/page.jsp?ID=52" target="_blank" rel="noopener">教育部《國字標準字體筆順學習網》</a>。
+<footer id="legal" class="credits leading-snug" style="border-top:0; text-align:center; padding:16px 12px;">
+  <!-- 來源致謝（再小一點，避免搶版面） -->
+  <div style="margin-top:12px; font-size:12px; line-height:1.6; color:#555;">
+    生字清單來自
+    <a href="https://pedia.cloud.edu.tw/Home/CopyRight" target="_blank" rel="noopener">教育雲「教育百科」</a>；
+    成語檢索連結至
+    <a href="https://dict.idioms.moe.edu.tw/pageView.jsp?ID=44&la=0&webMd=2" target="_blank" rel="noopener">教育部《成語典》</a>
+    （<a href="https://language.moe.gov.tw/001/Upload/Files/site_content/M0001/respub/idiomsdict_10409.pdf" target="_blank" rel="noopener">授權條款</a>）；
+    筆順練習連結至
+    <a href="https://stroke-order.learningweb.moe.edu.tw/page.jsp?ID=52" target="_blank" rel="noopener">教育部《國字標準字體筆順學習網》</a>。
     各連結頁內容與權利皆屬原網站所有。
-  </small>
+  </div>
+  <!-- 只縮小這一行的字 -->
+  <div style="font-size:12px; line-height:1.6;">
+    © 2025 Christina Yu. All rights reserved.
+  </div>
+
+  <!-- Icons：尺寸照舊（fa-2x），不受上面縮小影響 -->
+  <div style="margin-top:10px;">
+    <a href="mailto:mamahowma@gmail.com" aria-label="Email">
+      <i class="fa-solid fa-envelope fa-xl fa-fw"></i></a>　<a href="https://www.facebook.com/mamahowma" target="_blank" rel="noopener" aria-label="Facebook"><i class="fa-brands fa-facebook fa-xl fa-fw"></i></a>　<a href="https://portaly.cc/mamahowma/support" target="_blank" rel="noopener" aria-label="Support"><i class="fa-solid fa-mug-hot fa-xl fa-fw"></i>
+    </a>
+  </div>
+
+
 </footer>
 
 <style>
