--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ select {
     th{background:#fff; position:sticky; top:0;}
     /* 生字欄更窄、字再大一點點 */
     #result th:first-child{width:6rem;}
-    #result td.char{font-size:24px; font-weight:500; letter-spacing:2px; white-space:nowrap;}
+    #result td.char{font-size:24px; font-weight:600; letter-spacing:2px; white-space:nowrap;}
     /* 成語欄吃剩餘寬度、字體更大 */
     #result thead th{ font-size:17px; }
     #result td.idioms{font-size:20px; line-height:1.9;}
@@ -82,6 +82,33 @@ select {
     .muted{color:var(--muted); font-size:12px;}
     footer{max-width:960px; margin:12px auto 36px; padding:0 16px; text-align:center;}
     .pill{display:inline-block; background:var(--accent-2); color:#9a3412; padding:2px 8px; border-radius:999px; font-size:12px; margin-left:6px;}
+select{
+  font-family: "Iansui","Noto Sans TC","PingFang TC","Microsoft JhengHei",ui-sans-serif,system-ui,sans-serif;
+  font-size: 18px;
+  line-height: 1.35;       /* ↓ 行高小一點 */
+  padding: 6px 12px;       /* ↓ 上下留白變少 */
+  min-height: 38px;        /* ↓ 最小高度變矮（原 44） */
+  box-sizing: border-box;
+
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  padding-right: 1.8rem;   /* 箭頭空間略縮 */
+  background-image:
+    url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='18' height='18'><path d='M5 7l4 5 4-5' fill='none' stroke='%236b7280' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right .5rem center;
+  background-size: .9rem;  /* 箭頭略小 */
+}
+
+/* option 行距也收斂（iOS 可能無效，但不影響） */
+option, optgroup{
+  line-height: 1.35;
+  padding: 4px 6px;
+}
+
+
   </style>
 </head>
 <body>
