--- a/index.html
+++ b/index.html
@@ -173,14 +173,15 @@ option, optgroup{
   <script>
   // ===== 設定：學期、出版商、年級碼 =====
   const TERMS = [
-    { label:"114 學年上學期", code:"11401" }
+    { label:"114 學年上學期", code:"11401" },
+    { label:"113 學年下學期", code:"11302" }
   ];
   const PUB_CODE = { "南一":"0102", "康軒":"0103", "翰林":"0101" };
   const GRADE_CODE = { "一年級":"01","二年級":"02","三年級":"03","四年級":"04","五年級":"05","六年級":"06" };
 
-  // ===== CATALOG：完整佔位（命名規範：data/11401/data_11401_<出版社>_<年級>.json） =====
+  // ===== CATALOG：完整佔位（命名規範：data/{學期代碼}/data_{學期代碼}_{出版社}_{年級}.json） =====
   const CATALOG = {
-    "114 學年上學期": {
+    "11401": {
       "一年級": {
         "康軒": "data/11401/data_11401_康軒_一年級.json",
         "南一": "data/11401/data_11401_南一_一年級.json",
@@ -210,6 +211,38 @@ option, optgroup{
         "康軒": "data/11401/data_11401_康軒_六年級.json",
         "南一": "data/11401/data_11401_南一_六年級.json",
         "翰林": "data/11401/data_11401_翰林_六年級.json"
+      }
+    },
+    "11302": {
+      "一年級": {
+        "康軒": "data/11302/data_11302_康軒_一年級.json",
+        "南一": "data/11302/data_11302_南一_一年級.json",
+        "翰林": "data/11302/data_11302_翰林_一年級.json"
+      },
+      "二年級": {
+        "康軒": "data/11302/data_11302_康軒_二年級.json",
+        "南一": "data/11302/data_11302_南一_二年級.json",
+        "翰林": "data/11302/data_11302_翰林_二年級.json"
+      },
+      "三年級": {
+        "康軒": "data/11302/data_11302_康軒_三年級.json",
+        "南一": "data/11302/data_11302_南一_三年級.json",
+        "翰林": "data/11302/data_11302_翰林_三年級.json"
+      },
+      "四年級": {
+        "康軒": "data/11302/data_11302_康軒_四年級.json",
+        "南一": "data/11302/data_11302_南一_四年級.json",
+        "翰林": "data/11302/data_11302_翰林_四年級.json"
+      },
+      "五年級": {
+        "康軒": "data/11302/data_11302_康軒_五年級.json",
+        "南一": "data/11302/data_11302_南一_五年級.json",
+        "翰林": "data/11302/data_11302_翰林_五年級.json"
+      },
+      "六年級": {
+        "康軒": "data/11302/data_11302_康軒_六年級.json",
+        "南一": "data/11302/data_11302_南一_六年級.json",
+        "翰林": "data/11302/data_11302_翰林_六年級.json"
       }
     }
   };
